--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -79,8 +79,8 @@
                             </tbody>
                             </table>
                             {% endverbatim %}
-                            <div class="container">
-                                <button type="button" class="btn btn-primary" style="float: right;margin-right: 38px;">
+    <div class="row">
+        <button type="button" class="btn btn-primary" style="float: right;margin-right: 20px;">
                                     <a href="{{ path('review_order') }}">REVIEW ORDER</a>
                                 </button>
                             </div>
