--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -76,7 +76,7 @@
     <div class="page-container ">
         {% if is_granted('ROLE_ADMIN') %}
         <!-- BEGIN SIDEBAR -->
-        <div class="page-sidebar-wrapper">
+            <div class="page-sidebar-wrapper hidden-print">
             <div class="page-sidebar navbar-collapse collapse">
                 <!-- BEGIN SIDEBAR MENU -->
                 <ul class="page-sidebar-menu">
@@ -223,7 +223,7 @@
                 </div>
                 <!-- END PAGE HEADER-->
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         {% for flash_message in app.session.flashbag.get('notice') %}
                             <div class="alert alert-success">
                                 {{ flash_message }}
@@ -237,9 +237,7 @@
                     </div>
                 </div>
                 <!-- BEGIN PAGE CONTENT-->
-                <div class="container">
                     {{ block('content') }}
-                </div>
                 <!-- END PAGE CONTENT-->
             </div>
         </div>
