--- a/src/AppBundle/Resources/views/Partcategory/index.html.twig
+++ b/src/AppBundle/Resources/views/Partcategory/index.html.twig
@@ -11,6 +11,7 @@
 {% endblock page_name %}
 
 {% block content %}
+    <div class="row">
     <div class="col-md-10">
         <button class="btn btn-success" style="margin-bottom: 15px;">
             <a href="{{ path('admin_partcategory_new') }}">Create a new entry</a>
@@ -39,6 +40,7 @@
                 </tbody>
             </table>
         </div>
+    </div>
     </div>
 
 {% endblock content %}
