--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,3 +1,13 @@
+@media print {
+    .container {
+        margin: -20px !important;
+    }
+
+    .page-container {
+        margin: 0px !important;
+    }
+}
+
 .cart {
     color: #777;
     font-size: 29px !important;
