Added Modal for new part category.

--- a/src/AppBundle/Resources/views/Part/index.html.twig
+++ b/src/AppBundle/Resources/views/Part/index.html.twig
@@ -12,9 +12,7 @@
 
 {% block content %}
     <div class="" style="margin-right: 0px; margin-left: 0px;">
-        <button class="btn btn-success" style="margin-bottom: 15px;">
-            <a href="{{ path('admin_part_new') }}">Add a New Part</a>
-        </button>
+        <a class="btn btn-success" style="margin-bottom: 15px;" href="{{ path('admin_part_new') }}">Add a New Part</a>
         <div class="table">
             <table id="part-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
