--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -271,7 +271,7 @@
                     console.log('json start');
                 },
                 type: 'GET',
-                url: "{{ path('api-get-products') }}",
+                url: "{{ path('api_get_products') }}",
                 success: function (data) {
                     $scope.$apply(function () {
                         $scope.products = data;
