--- a/src/AppBundle/Resources/views/Group/list_content.html.twig
+++ b/src/AppBundle/Resources/views/Group/list_content.html.twig
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-md-12">
         <div class="table">
+            <a class="btn btn-success" style="margin-bottom: 15px;" href="{{ path('fos_user_group_new') }}">Add a New
+                Office</a>
             <table id="part-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
                             <thead>
                             <tr>
