--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -200,7 +200,7 @@
                         console.log('json load cart');
                     },
                     type: 'GET',
-                    url: "{{ path('api-load-cart') }}",
+                    url: "{{ path('api_load_cart') }}",
                     success: function (data) {
                         $scope.$apply(function () {
                             $scope.cart = data.cart;
@@ -215,7 +215,7 @@
                         console.log('json start');
                     },
                     type: 'GET',
-                    url: "{{ path('api-get-products') }}",
+                    url: "{{ path('api_get_products') }}",
                     success: function (data) {
                         $scope.$apply(function () {
                             $scope.products = data;
@@ -231,7 +231,7 @@
                 console.log(item);
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('api-add-item') }}",
+                    url: "{{ path('api_add_item') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
@@ -247,7 +247,7 @@
             $scope.removeItem = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('api-remove-item') }}",
+                    url: "{{ path('api_remove_item') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
@@ -262,7 +262,7 @@
             $scope.addLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('add-line-number') }}",
+                    url: "{{ path('add_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
@@ -279,7 +279,7 @@
             $scope.updateLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('update-line-number') }}",
+                    url: "{{ path('update_line_number') }}",
                     data: {line_number: item},
                     dataType: 'json',
                     success: function () {
@@ -293,7 +293,7 @@
             $scope.removeLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('remove-line-number') }}",
+                    url: "{{ path('remove_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
