--- a/src/AppBundle/Resources/views/User/view-past-order.html.twig
+++ b/src/AppBundle/Resources/views/User/view-past-order.html.twig
@@ -141,7 +141,7 @@
                     console.log('json start');
                 },
                 type: 'GET',
-                url: "{{ path('api-get-products') }}",
+                url: "{{ path('api_get_products') }}",
                 success: function (data) {
                     $scope.$apply(function () {
                         $scope.products = data;
@@ -188,7 +188,7 @@
             $scope.addLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('add-line-number') }}",
+                    url: "{{ path('add_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
@@ -205,7 +205,7 @@
             $scope.updateLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('update-line-number') }}",
+                    url: "{{ path('update_line_number') }}",
                     data: {line_number: item},
                     dataType: 'json',
                     success: function () {
@@ -219,7 +219,7 @@
             $scope.removeLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('remove-line-number') }}",
+                    url: "{{ path('remove_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
