--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -31,69 +31,69 @@
                             </div>
                             <div ng-if="numItems != 0">
                                 {% verbatim %}
+<div class="table-responsive">
  <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
                                 <thead>
                                 <tr>
-                                    <th width="12%">PRODUCT #</th>
-                                    <th width="25%">DESCRIPTION</th>
-                                    <th width="5%">RETURN REQUIRED</th>
-                                    <th width="25%">LINE NUMBER (S)</th>
-                                    <th width="5%">QTY</th>
-                                    <th width="5%">SHIP QTY</th>
-                                    <th width="5%">BACK ORDER QTY</th>
-                                    <th width="18%">Notes</th>
+                                    <th>PRODUCT #</th>
+                                    <th>DESCRIPTION</th>
+                                    <th>RETURN REQUIRED</th>
+                                    <th>LINE NUMBER (S)</th>
+                                    <th>QTY</th>
+                                    <th>SHIP QTY</th>
+                                    <th>BACK ORDER QTY</th>
+                                    <th>Notes</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="item in cart track by $index">
                                     <div ng-if="angular.isobject(item)">
-                                        <td style="padding-top: 20px;">{{ item.stock_number }}</td>
-                                        <td style="padding-top: 20px;">{{ item.description }}</td>
-                                        <td  style="padding-top: 20px;">
+                                        <td>{{ item.stock_number }}</td>
+                                        <td>{{ item.description }}</td>
+                                        <td>
                                             <div ng-if="item.require_return == 1">
                                                 <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
                                              </div>
                                         </td>
                                         <td>
-                                           <div ng-repeat="num in item.line_numbers track by $index" style="display: inline-block;">
-                                                <input ng-model="num.line_number" type="text" class="form-control line-number" ng-change="updateLineNumber(num)" maxlength="4" style="width: 60px; background: transparent; border: none;" disabled>
+                                           <div ng-repeat="num in item.line_numbers track by $index" style="display: block;">
+                                                {{ num.line_number }}
                                            </div>
                                         </td>
-                                        <td style="padding-top: 20px;">
+                                        <td>
                                             <div class="row">
                                                 <center>
                                                 {{ item.quantity }}
                                                 </center>
                                             </div>
                                         </td>
-                                        <td style="padding-top: 20px;">
+                                        <td>
                                             <div class="row">
                                                 <center>
                                                 {{ item.ship_quantity }}
                                                 </center>
                                             </div>
                                         </td>
-                                        <td style="padding-top: 20px;">
+                                        <td>
                                             <div class="row">
                                                 <center>
                                                 {{ item.back_order_quantity }}
                                                 </center>
                                             </div>
                                         </td>
-                                        <td style="padding-top: 20px;">
-                                            <div class="row">
+                                        <td>
                                                 <center>
                                                 {{ item.note }}
                                                 </center>
-                                            </div>
                                         </td>
                                         </div>
                                     </tr>
                             </tbody>
                             </table>
+                            </div>
                             {% endverbatim %}
                                 <div class="row">
-                                    <div class="col-md-4 col-xs-6">
+                                    <div class="col-md-4 col-xs-12">
                                         <div class="well">
                                             <div class="numbers">
                                                 Order Info
@@ -112,7 +112,18 @@
                                             </address>
                                         </div>
                                     </div>
-                                    <div class="col-md-8 col-xs-6 invoice-block"
+                                    <div class="col-md-4 col-xs-12">
+                                        <div class="well">
+                                            <div class="numbers">
+                                                Order Notes
+                                            </div>
+                                            <hr>
+                                            <address>
+                                                {{ user_notes }}
+                                            </address>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 col-xs-12 invoice-block"
                                          style="text-align: right; margin-top: 30px;">
                                         <ul class="list-unstyled amounts">
                                             <li>
@@ -274,7 +285,7 @@
             $scope.addLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('add_line_number_review_order') }}",
+                    url: "{{ path('api_add_line_number_review_order') }}",
                     data: {data: item, order_id: {{ cart_id }}},
                     dataType: 'json',
                     success: function (data) {
@@ -304,7 +315,7 @@
             $scope.removeLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('remove_line_number_review_order') }}",
+                    url: "{{ path('api_remove_line_number_review_order') }}",
                     data: {data: item, order_id: {{ cart_id }}},
                     dataType: 'json',
                     success: function (data) {
