--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -12,6 +12,7 @@
 {% block content %}
     <div class="row">
     <div ng-app="myShoppingList" ng-controller="myCtrl" ng-init="init()" class="ng-cloak" ng-cloak>
+
         <div id="shopping-cart" class="col-md-12">
             <div class="stats-overview stat-block">
                 <div class="display stat ok huge">
@@ -31,17 +32,18 @@
                         </div>
                         <div ng-if="numItems != 0">
                             {% verbatim %}
- <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
+<div class="table-responsive">
+ <table id="cart-table" class="display responsive nowrap table table-striped table-bordered" cellspacing="0" width="100%">
                                 <thead>
                                 <tr>
-                                    <th width="12%">PRODUCT #</th>
-                                    <th width="25%">DESCRIPTION</th>
-                                    <th width="5%">RETURN REQUIRED</th>
-                                    <th width="25%">LINE NUMBER (S)</th>
-                                    <th width="5%">QTY</th>
-                                    <th width="5%">SHIP QTY</th>
-                                    <th width="5%">BACK ORDER QTY</th>
-                                    <th width="18%">Notes</th>
+                                    <th>PRODUCT #</th>
+                                    <th>DESCRIPTION</th>
+                                    <th>RETURN REQUIRED</th>
+                                    <th>LINE NUMBER (S)</th>
+                                    <th>QTY</th>
+                                    <th>SHIP QTY</th>
+                                    <th>BACK ORDER QTY</th>
+                                    <th>NOTES</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -75,21 +77,24 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <input ng-model="item.ship_quantity" type="text" class="form-control line-number" ng-change="updateProduct(item)" maxlength="3" style="width: 60px;">
+                                            <input ng-model="item.ship_quantity" type="number" class="form-control line-number" ng-change="updateProduct(item)" maxlength="3" style="width: 60px;">
                                         </td>
                                         <td>
-                                            <input ng-model="item.back_order_quantity" type="text" class="form-control line-number" ng-change="updateProduct(item)" maxlength="3" style="width: 60px;">
+                                            <input ng-model="item.back_order_quantity" type="number" class="form-control line-number" ng-change="updateProduct(item)" maxlength="3" style="width: 60px;">
                                         </td>
                                         <td>
-                                            <textarea ng-model="item.note" type="text" class="form-control line-number" ng-change="updateProduct(item)"></textarea>
+                                            <center>
+                                                <textarea ng-model="item.note" type="text" class="form-control line-number" ng-change="updateProduct(item)"></textarea>
+                                            </center>
                                         </td>
                                         </div>
                                     </tr>
                             </tbody>
                             </table>
+                            </div>
                             {% endverbatim %}
                             <div class="row">
-                                <div class="col-md-4 col-xs-6">
+                                <div class="col-md-4 col-xs-12">
                                     <div class="well">
                                         <div class="numbers">
                                             Order Info
@@ -108,7 +113,18 @@
                                         </address>
                                     </div>
                                 </div>
-                                <div class="col-md-8 col-xs-6 invoice-block"
+                                <div class="col-md-4 col-xs-12">
+                                    <div class="well">
+                                        <div class="numbers">
+                                            Order Notes
+                                        </div>
+                                        <hr>
+                                        <address>
+                                            {{ user_notes }}
+                                        </address>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 col-xs-12 invoice-block"
                                      style="text-align: right; margin-top: 30px;">
                                     <ul class="list-unstyled amounts">
                                         <li>
@@ -167,7 +183,7 @@
                     </div>
                     <hr>
                     <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-                        <table id="part-table" class="table table-striped  no-footer" cellspacing="0">
+                        <table id="part-table" class="table table-striped no-footer" cellspacing="0" width="100%">
                             <thead>
                             <tr>
                                 <th>PRODUCT #</th>
@@ -213,8 +229,12 @@
     <script>
         $(document).ready(function () {
             oTable = $('#part-table').DataTable({
-                "paging": false,
-                "sDom": '<"top">rt<"bottom"lp><"clear">'
+                "sDom": '<"top">rt<"bottom"lp><"clear">',
+                responsive: true,
+                columnDefs: [
+                    {responsivePriority: 1, targets: 0},
+                    {responsivePriority: 2, targets: -2}
+                ]
             });
             $('#myInputTextField').keyup(function () {
                 oTable.search($(this).val()).draw();
@@ -338,7 +358,7 @@
             $scope.addLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('add_line_number_review_order') }}",
+                    url: "{{ path('api_add_line_number_review_order') }}",
                     data: {data: item, order_id: {{ cart_id }}},
                     dataType: 'json',
                     success: function (data) {
@@ -368,7 +388,7 @@
             $scope.removeLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('remove_line_number_review_order') }}",
+                    url: "{{ path('api_remove_line_number_review_order') }}",
                     data: {data: item, order_id: {{ cart_id }}},
                     dataType: 'json',
                     success: function (data) {
