--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -2,33 +2,33 @@
 {% block title %}Home{% endblock %}
 
 {% block cart %}
+    <div class="row">
     <div id="shopping-cart" class="col-md-12">
-            <div class="stats-overview stat-block">
-                <div class="display stat ok huge">
+        <div class="stats-overview stat-block">
+            <div class="display stat ok huge">
 
+            </div>
+            <div class="details">
+
+                <div class="numbers">
+                    PRODUCT SHOPPING CART
                 </div>
-                <div class="details">
-
-                    <div class="numbers">
-                        PRODUCT SHOPPING CART
+                <hr>
+                <div ng-if="numItems == 0">
+                    <div style="padding-bottom: 10px; padding-top: 20px;">
+                        No products currently in cart.
                     </div>
-                    <hr>
-                    <div class="title" style="padding-bottom: 10px; padding-top: 0px; margin-top: -7px;">
-                        <div ng-if="numItems == 0">
-                            <div style="padding-bottom: 10px; padding-top: 20px;">
-                                No products currently in cart.
-                            </div>
-                        </div>
-<div ng-if="numItems != 0">
-    {% verbatim %}
- <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
+                </div>
+                <div ng-if="numItems != 0">
+                    {% verbatim %}
+                            <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
                                 <thead>
                                 <tr>
-                                    <th width="12%">PRODUCT #</th>
-                                    <th width="29%">DESCRIPTION</th>
-                                    <th width="9%">RETURN REQUIRED</th>
-                                    <th width="35%">LINE NUMBER (S)</th>
-                                    <th width="15%">QUANTITY</th>
+                                    <th>PRODUCT #</th>
+                                    <th>DESCRIPTION</th>
+                                    <th>RETURN REQUIRED</th>
+                                    <th>LINE NUMBER (S)</th>
+                                    <th style="max-width:95%">QUANTITY</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -79,84 +79,86 @@
                             </tbody>
                             </table>
                             {% endverbatim %}
-    <div class="row">
-        <button type="button" class="btn btn-primary" style="float: right;margin-right: 20px;">
-                                    <a href="{{ path('review_order') }}">REVIEW ORDER</a>
-                                </button>
-                            </div>
-                            </div>
-
+                    <div class="row">
+                        <a class="btn btn-primary" style="float: right;margin-right: 20px; margin-bottom: 20px;"
+                           href="{{ path('review_order') }}">REVIEW ORDER</a>
                     </div>
                 </div>
+
             </div>
         </div>
-
-            <div class="col-md-12" style="margin-top: 30px;">
-                <div class="stats-overview stat-block">
-                    <div class="display stat ok huge">
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" style="margin-top: 30px;">
+            <div class="stats-overview stat-block">
+                <div class="display stat ok huge">
 
                 </div>
-                    <div class="details">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="numbers">
-                                    PRODUCT SEARCH
-                                </div>
-                            </div>
-                            <div id='filters' class="col-md-5">
-                                <select class="form-control">
-                                    <option value="*">-- All Categories --</option>
-                                    {% for category in categories %}
-                                        <option value=".{{ category.nameCononical }}">{{ category.name }}</option>
-                                    {% endfor %}
-                                </select>
+                <div class="details">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="numbers">
+                                PRODUCT SEARCH
+                        </div>
+                    </div>
+                        <div id='filters' class="col-md-5">
+                            <select class="form-control">
+                                <option value="*">-- All Categories --</option>
+                                {% for category in categories %}
+                                    <option value=".{{ category.nameCononical }}">{{ category.name }}</option>
+                            {% endfor %}
+                            </select>
 
                         </div>
-                            <div class="col-md-4">
-                                <input type="text" class="form-control" id="myInputTextField"
-                                       placeholder="Search by product Description or Number">
-                            </div>
-                    </div>
-                        <hr>
-                        <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-                            <table id="part-table" class="table table-striped  no-footer" cellspacing="0">
-                                <thead>
-                                <tr>
-                                    <th>PRODUCT #</th>
-                                    <th width="40px">PHOTO</th>
-                                    <th>DESCRIPTION</th>
-                                    <th width="30px">RETURN REQUIRED</th>
-                                    <th width="50px">ADD TO CART</th>
-                                </tr>
-                                </thead>
-                                <tbody id="container">
-                                {% for product in products %}
-                                    <tr class="grid-item {{ product.partCategory.nameCononical }}">
-                                        <td>{{ product.stockNumber }}</td>
-                                        <td>
-                                            <center>
-                                                <i class="fa fa-camera" style="font-size: 22px;color: #e2001a;"></i>
-                                            </center>
-                                        </td>
-                                        <td>{{ product.description }}</td>
-                                        <td>{{ product.requireReturn ? "<center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>" : '' }}</td>
-                                        <td>
-                                            <center>
-                                                <button ng-click="addItem({{ product.id }})"
-                                                        style="background: transparent; border: none;">
-                                                    <i class="fa fa-shopping-cart"
-                                                       style="font-size: 25px;color: #e2001a;"></i>
-                                                </button>
-                                            </center>
-                                        </td>
-                                    </tr>
-                            {% endfor %}
-                                </tbody>
-                            </table>
-                    </div>
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" id="myInputTextField"
+                                   placeholder="Search by product Description or Number">
+                        </div>
                 </div>
+                    <hr>
+                    <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
+
+                        <table id="part-table" class="responsive nowrap table table-striped no-footer" cellspacing="0"
+                               width="100%">
+                            <thead>
+                            <tr>
+                                <th>PRODUCT #</th>
+                                <th width="40px">PHOTO</th>
+                                <th>DESCRIPTION</th>
+                                <th width="30px">RETURN REQUIRED</th>
+                                <th width="50px">ADD TO CART</th>
+                            </tr>
+                            </thead>
+                            <tbody id="container">
+                            {% for product in products %}
+                                <tr class="grid-item {{ product.partCategory.nameCononical }}">
+                                    <td>{{ product.stockNumber }}</td>
+                                    <td>
+                                        <center>
+                                            <i class="fa fa-camera" style="font-size: 22px;color: #e2001a;"></i>
+                                        </center>
+                                    </td>
+                                    <td>{{ product.description }}</td>
+                                    <td>{{ product.requireReturn ? "<center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>" : '' }}</td>
+                                    <td>
+                                        <center>
+                                            <button ng-click="addItem({{ product.id }})"
+                                                    style="background: transparent; border: none;">
+                                                <i class="fa fa-shopping-cart"
+                                                   style="font-size: 25px;color: #e2001a;"></i>
+                                            </button>
+                                        </center>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
             </div>
         </div>
+        </div>
+    </div>
 {% endblock cart %}
 
 {% block footer %}
@@ -262,7 +264,7 @@
             $scope.addLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('add_line_number') }}",
+                    url: "{{ path('api_add_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
@@ -293,7 +295,7 @@
             $scope.removeLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('remove_line_number') }}",
+                    url: "{{ path('api_remove_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
