--- a/src/AppBundle/Resources/views/User/review-order.html.twig
+++ b/src/AppBundle/Resources/views/User/review-order.html.twig
@@ -1,6 +1,7 @@
 {% extends "AppBundle:User:cart-header.html.twig" %}
 {% block title %}Review Order{% endblock %}
 {% block cart %}
+    <div class="row">
     <div id="shopping-cart" class="col-xs-12">
         <div class="stats-overview stat-block">
             <div class="display stat ok huge">
@@ -14,13 +15,13 @@
                     <hr>
                     <div class="row">
                         <div class="col-xs-12">
-                                       <div ng-if="numItems == 0">
-                        <div style="padding-bottom: 10px; padding-top: 20px;">
-                            No products currently in cart.
-                        </div>
-                    </div>
-                    <div ng-if="numItems != 0">
-                            {% verbatim %}
+                            <div ng-if="numItems == 0">
+                                <div style="padding-bottom: 10px; padding-top: 20px;">
+                                    No products currently in cart.
+                                </div>
+                            </div>
+                            <div ng-if="numItems != 0">
+                                {% verbatim %}
                             <table class="table table-striped table-hover" style="margin-top: 40px;">
                                 <thead>
                                 <tr>
@@ -72,24 +73,36 @@
                                 </tbody>
                             </table>
                             {% endverbatim %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="padding-bottom: 25px;">
+                        <div class="container" style="text-align: center;">
+                            <div class="numbers" style="    padding-bottom: 15px;">
+                                <center>NOTES</center>
+                            </div>
+                            <textarea style="width: 75%; margin-left: auto; margin-right: auto;     height: 100px;"
+                                      ng-model="notes" class="form-control" ng-change="updateNotes(notes)"></textarea>
                         </div>
                     </div>
                     <div class="row" style="padding-bottom: 25px;">
                         <div class="col-xs-4">
                         </div>
-                        <div class="col-xs-8 invoice-block">
-
+                        <div class="col-xs-6 invoice-block">
                             <br/>
                             <a class="btn btn-lg btn-info hidden-print" onclick="window.print();">Print <i
                                         class="fa fa-print"></i></a>
+
                             <a class="btn btn-lg btn-success hidden-print"
                                href="{{ path('submit_cart', {'cart_id': cart_id}) }}">
                                 Submit Your Order <i class="fa fa-check"></i></a>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 {% endblock cart %}
@@ -140,102 +153,20 @@
                     $scope.$apply(function () {
                         $scope.cart = data.cart;
                         $scope.numItems = data.num_items;
+                        $scope.notes = data.cart_notes;
                         console.log($scope.cart);
                     });
                 }
             });
 
-            $.ajax({
-                beforeSend: function () {
-                    console.log('json start');
-                },
-                type: 'GET',
-                url: "{{ path('api_get_products') }}",
-                success: function (data) {
-                    $scope.$apply(function () {
-                        $scope.products = data;
-                    });
-                }
-            });
-
-            $scope.inArray = function (item, array) {
-                return array.indexOf(item);
-            };
-
-            $scope.addItem = function (item) {
-                console.log(item);
+            $scope.updateNotes = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('api_add_item') }}",
-                    data: {product_id: item},
-                    dataType: 'json',
-                    success: function (data) {
-                        $scope.$apply(function () {
-                            $scope.cart = data.cart;
-                            $scope.numItems = data.num_items;
-                            console.log($scope.cart);
-                        });
-                    }
-                });
-            };
-
-            $scope.removeItem = function (item) {
-                $.ajax({
-                    type: 'POST',
-                    url: "{{ path('api_remove_item') }}",
-                    data: {product_id: item},
-                    dataType: 'json',
-                    success: function (data) {
-                        $scope.$apply(function () {
-                            $scope.cart = data.cart;
-                            $scope.numItems = data.num_items;
-                        });
-                    }
-                });
-            };
-
-            $scope.addLineNumber = function (item) {
-                $.ajax({
-                    type: 'POST',
-                    url: "{{ path('add_line_number') }}",
-                    data: {product_id: item},
-                    dataType: 'json',
-                    success: function (data) {
-                        $scope.$apply(function () {
-                            $scope.cart = data.cart;
-                            $scope.numItems = data.num_items;
-                        });
-                    },
-                    error: function (data) {
-                        console.log(data);
-                    }
-                });
-            };
-            $scope.updateLineNumber = function (item) {
-                $.ajax({
-                    type: 'POST',
-                    url: "{{ path('update_line_number') }}",
-                    data: {line_number: item},
+                    url: "{{ path('api_update_notes') }}",
+                    data: {note: item, cart_id: {{ cart_id }} },
                     dataType: 'json',
                     success: function () {
 
-                    },
-                    error: function (data) {
-                        console.log(data);
-                    }
-                });
-            };
-            $scope.removeLineNumber = function (item) {
-                $.ajax({
-                    type: 'POST',
-                    url: "{{ path('remove_line_number') }}",
-                    data: {product_id: item},
-                    dataType: 'json',
-                    success: function (data) {
-                        $scope.$apply(function () {
-                            $scope.cart = data.cart;
-                            $scope.numItems = data.num_items;
-                        });
                     },
                     error: function (data) {
                         console.log(data);
