--- a/src/AppBundle/Resources/views/User/view-past-order.html.twig
+++ b/src/AppBundle/Resources/views/User/view-past-order.html.twig
@@ -1,26 +1,27 @@
 {% extends "AppBundle:User:cart-header.html.twig" %}
 {% block title %}View Order{% endblock %}
 {% block cart %}
-    <div id="shopping-cart" class="col-xs-12">
-        <div class="stats-overview stat-block">
-            <div class="display stat ok huge">
+    <div class="row">
+        <div id="shopping-cart" class="col-xs-12">
+            <div class="stats-overview stat-block">
+                <div class="display stat ok huge">
 
-            </div>
-            <div class="details">
-                <div class="invoice">
-                    <div class="numbers">
-                        VIEW ORDER
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-12">
-                                       <div ng-if="numItems == 0">
-                        <div style="padding-bottom: 10px; padding-top: 20px;">
-                            No products currently in cart.
+                </div>
+                <div class="details">
+                    <div class="invoice">
+                        <div class="numbers">
+                            VIEW ORDER
                         </div>
-                    </div>
-                    <div ng-if="numItems != 0">
-                            {% verbatim %}
+                        <hr>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div ng-if="numItems == 0">
+                                    <div style="padding-bottom: 10px; padding-top: 20px;">
+                                        No products currently in cart.
+                                    </div>
+                                </div>
+                                <div ng-if="numItems != 0">
+                                    {% verbatim %}
                             <table class="table table-striped table-hover" style="margin-top: 40px;">
                                 <thead>
                                 <tr>
@@ -39,6 +40,12 @@
                                     <th>
                                         QUANTITY
                                     </th>
+                                    <th>
+                                        ITEMS SHIPPED
+                                    </th>
+                                    <th>
+                                        ITEMS BACK ORDERED
+                                    </th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -52,17 +59,25 @@
                                                 <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
                                             </div>
                                         </td>
-                                        <td>
-                                            <div ng-repeat="num in item.line_numbers track by $index" style="display: inline-block;">
-                                                <input ng-model="num.line_number" type="text" class="form-control line-number" disabled ng-change="updateLineNumber(num)" maxlength="4" style="width: 60px;">
+                                        <td style="padding-top: 20px;">
+                                            <div ng-repeat="num in item.line_numbers track by $index" style="display: block;">
+                                                {{ num.line_number }}
                                             </div>
                                         </td>
                                         <td style="padding-top: 20px;">
-                                            <div class="row">
-                                                    <center>
-                                                        {{ item.quantity }}
-                                                    </center>
-                                            </div>
+                                            <center>
+                                               {{ item.quantity }}
+                                            </center>
+                                        </td>
+                                        <td style="padding-top: 20px;">
+                                            <center>
+                                               {{ item.ship_quantity }}
+                                            </center>
+                                        </td>
+                                        <td style="padding-top: 20px;">
+                                            <center>
+                                               {{ item.back_order_quantity }}
+                                            </center>
                                         </td>
                                     </div>
                                 </tr>
@@ -70,12 +85,14 @@
                                 </tbody>
                             </table>
                             {% endverbatim %}
+                                </div>
+                            </div>
+                            <div class="" style="padding-bottom: 25px; padding-right: 35px; float: right;">
+                                <br/>
+                                <a class="btn btn-lg btn-info hidden-print" onclick="window.print();">Print <i
+                                            class="fa fa-print"></i></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="container" style="padding-bottom: 25px;">
-                            <br/>
-                            <a class="btn btn-lg btn-info hidden-print" onclick="window.print();">Print <i
-                                        class="fa fa-print"></i></a>
                     </div>
                 </div>
             </div>
@@ -130,7 +147,7 @@
                 success: function (data) {
                     $scope.$apply(function () {
                         $scope.cart = data.cart;
-                        $scope.numItems = data.num_items;
+                        $scope.numItems = data.numItems;
                         console.log($scope.cart);
                     });
                 }
@@ -188,7 +205,7 @@
             $scope.addLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('add_line_number') }}",
+                    url: "{{ path('api_add_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
@@ -219,7 +236,7 @@
             $scope.removeLineNumber = function (item) {
                 $.ajax({
                     type: 'POST',
-                    url: "{{ path('remove_line_number') }}",
+                    url: "{{ path('api_remove_line_number') }}",
                     data: {product_id: item},
                     dataType: 'json',
                     success: function (data) {
