--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -38,11 +38,11 @@
                                 <tr>
                                     <th>PRODUCT #</th>
                                     <th>DESCRIPTION</th>
-                                    <th>RETURN REQUIRED</th>
+                                    <th>RETURN</th>
                                     <th>LINE NUMBER (S)</th>
                                     <th>QTY</th>
                                     <th>SHIP QTY</th>
-                                    <th>BACK ORDER QTY</th>
+                                    <th>B.O. QTY</th>
                                     <th>NOTES</th>
                                 </tr>
                                 </thead>
