--- a/src/AppBundle/Resources/views/User/view-past-order.html.twig
+++ b/src/AppBundle/Resources/views/User/view-past-order.html.twig
@@ -32,7 +32,7 @@
                                         DESCRIPTION
                                     </th>
                                     <th class="hidden-480">
-                                        RETURN REQUIRED
+                                        RETURN
                                     </th>
                                     <th class="hidden-480">
                                         LINE NUMBERS
