--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -52,7 +52,7 @@
                                         <td>{{ item.description }}</td>
                                         <td>
                                             <div ng-if="item.require_return == 1">
-                                                <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
+                                                <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a; padding-top: 7px;'></i></center>
                                              </div>
                                         </td>
                                         <td>
