Updated some things.

--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -1,8 +1,8 @@
 {% extends ":template:layout.html.twig" %}
 
-{% block title %}Review Order{% endblock %}
+{% block title %}Order{% endblock %}
 {% block page_title %}
-    Order
+
 {% endblock page_title %}
 
 {% block page_name %}
