Updated some things.

--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -1,4 +1,4 @@
-{% extends "AppBundle:User:cart-header.html.twig" %}
+{% extends "AppBundle:Cart:cart-header.html.twig" %}
 {% block title %}Home{% endblock %}
 
 {% block cart %}
