--- a/src/AppBundle/Resources/views/Cart/view-past-order.html.twig
+++ b/src/AppBundle/Resources/views/Cart/view-past-order.html.twig
@@ -1,4 +1,4 @@
-{% extends "AppBundle:User:cart-header.html.twig" %}
+{% extends "AppBundle:Cart:cart-header.html.twig" %}
 {% block title %}View Order{% endblock %}
 {% block cart %}
     <div class="row">
